# share_trip_experience

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
share_trip_experience/: __init__.py  app.py  db.py  models.py
share_trip_experience/templates/: edit_trip.html  index.html  layout.html  login.html  my_trips.html  registration.html  users.html  users_trips.html
tests/: test_routes.py
