[tool.poetry]
name = "share-trip-experience"
version = "0.1.0"
description = "app where you can share your journeys with other users"
authors = ["Elizaveta"]
readme = "README.md"
packages = [{include = "share_trip_experience"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
